unidad07/service_frontend.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: k8s4arch-hotels-frontend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
