unidad07/ingress_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "public"
  name: backend-ingress
spec:
  rules:
  - host: api-hotels.internal.itrip.io
    http:
      paths:
      - path: "/hotels"
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port: 
              number: 80
